--- a/assets/css/error.css
+++ b/assets/css/error.css
@@ -18,6 +18,12 @@ background-image: linear-gradient(to top, #2e1753, #1f1746, #131537, #0d1028, #0
 h1{
   font-size:80px;
 }
+
+h3{
+	text-align:center;
+  font-size:70px;
+}
+
 .star{
   position:absolute;
   width:2px;
@@ -30,7 +36,7 @@ h1{
   width:100px;
   position:absolute;
   top:60%;
-  animation:astronautFly 9s infinite linear;
+  animation:astronautFly 11s infinite linear;
 }
 @keyframes astronautFly{
   0%{
@@ -49,7 +55,7 @@ h1{
     transform:rotate(30deg);
   }
   100%{
-    left:100%;
+    left: 110%;
     transform:rotate(45deg);
   }
 }
