--- a/assets/css/error.css
+++ b/assets/css/error.css
@@ -1,77 +1,96 @@
-body{
-  margin:0;
-  padding:0;
-  font-family: 'Tomorrow', sans-serif;
-  height:100vh;
-background-image: linear-gradient(to top, #2e1753, #1f1746, #131537, #0d1028, #050819);
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  overflow:hidden;
-}
-.text{
-  position:absolute;
-  top:40%;
-  color:#fff;
-  text-align:center;
-}
-h1{
-  font-size:80px;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-h3{
-  font-size:70px;
+body {
+  padding: 0;
+  margin: 0;
 }
 
-.star{
-  position:absolute;
-  width:2px;
-  height:2px;
-  background:#fff;
-  right:0;
-  animation:starTwinkle 3s infinite linear;
+#notfound {
+  position: relative;
+  height: 100vh;
 }
-.astronaut img{
-  width:100px;
-  position:absolute;
-  top:60%;
-  animation:astronautFly 10s infinite linear;
+
+#notfound .notfound {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
-@keyframes astronautFly{
-  0%{
-    left:-100px;
-  }
-  25%{
-    top:50%;
-    transform:rotate(30deg);
-  }
-  50%{
-    transform:rotate(45deg);
-    top:55%;
-  }
-  75%{
-    top:60%;
-    transform:rotate(30deg);
-  }
-  100%{
-    left: 90%;
-    transform:rotate(45deg);
-  }
+
+.notfound {
+  max-width: 410px;
+  width: 100%;
+  text-align: center;
 }
-@keyframes starTwinkle{
-  0%{
-     background:rgba(255,255,255,0.4);
-  }
-  25%{
-    background:rgba(255,255,255,0.8);
-  }
-  50%{
-   background:rgba(255,255,255,1);
-  }
-  75%{
-    background:rgba(255,255,255,0.8);
-  }
-  100%{
-    background:rgba(255,255,255,0.4);
-  }
+
+.notfound .notfound-404 {
+  height: 280px;
+  position: relative;
+  z-index: -1;
+}
+
+.notfound .notfound-404 h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 230px;
+  margin: 0px;
+  font-weight: 900;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  background: url('assets/img/bg.jpg') no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: cover;
+  background-position: center;
+}
+
+
+.notfound h2 {
+  font-family: 'Montserrat', sans-serif;
+  color: #000;
+  font-size: 24px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-top: 0;
+}
+
+.notfound p {
+  font-family: 'Montserrat', sans-serif;
+  color: #000;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 20px;
+  margin-top: 0px;
+}
+
+.notfound a {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  text-decoration: none;
+  text-transform: uppercase;
+  background: #0046d5;
+  display: inline-block;
+  padding: 15px 30px;
+  border-radius: 40px;
+  color: #fff;
+  font-weight: 700;
+  -webkit-box-shadow: 0px 4px 15px -5px #0046d5;
+          box-shadow: 0px 4px 15px -5px #0046d5;
+}
+
+
+@media only screen and (max-width: 767px) {
+    .notfound .notfound-404 {
+      height: 142px;
+    }
+    .notfound .notfound-404 h1 {
+      font-size: 112px;
+    }
 }
