--- a/assets/css/error.css
+++ b/assets/css/error.css
@@ -1,8 +1,3 @@
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
 body {
   padding: 0;
   margin: 0;
@@ -45,6 +40,7 @@ body {
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
   background: url('../assets/bg.jpg') no-repeat;
+ background: url('assets/bg.jpg') no-repeat;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-size: cover;
